chore: add build configs